--- a/Web.Statu/Views/Home/Detail_Child_embed.cshtml
+++ b/Web.Statu/Views/Home/Detail_Child_embed.cshtml
@@ -1,13 +1,14 @@
 ﻿@model HlidacStatu.Lib.Data.Smlouva
 @using Devmasters.Core
 @using HlidacStatu.Lib
-
+@using HlidacStatu.Web.Framework
+ 
 @{
     Layout = null;
 }
 @{
-    string hlavni = $"Smlouva mezi subjekty <a href='/Subjekt/{ Model.Platce.ico}'>{Devmasters.Core.TextUtil.ShortenText(Model.Platce.nazev, 60)}</a> a "
-+ $"<a href='/Subjekt/{Model.Prijemce.First().ico}'>{Devmasters.Core.TextUtil.ShortenText(Model.Prijemce.First().nazev, 60)}</a>";
+    string hlavni = $"Smlouva mezi subjekty "+ Html.KIndexLabelLink(Model.Platce.ico) + "<a href='/Subjekt/{ Model.Platce.ico}'>{Devmasters.Core.TextUtil.ShortenText(Model.Platce.nazev, 60)}</a> a "
++ Html.KIndexLabelLink(Model.Prijemce.First().ico) + $"<a href='/Subjekt/{Model.Prijemce.First().ico}'>{Devmasters.Core.TextUtil.ShortenText(Model.Prijemce.First().nazev, 60)}</a>";
     if (Model.Prijemce.Count() == 0)
     {
         hlavni += $".";
